[gd_scene load_steps=21 format=2]

[ext_resource path="res://WorldRelated/AbstractWorldSlice.tscn" type="PackedScene" id=1]
[ext_resource path="res://ObjectsRelated/Objects/Imps/InteractableButton/Object_InteractableButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://AreaRegionRelated/Subs/PlayerCaptureAreaRegion/PlayerCaptureAreaRegion.tscn" type="PackedScene" id=3]
[ext_resource path="res://ObjectsRelated/TilesRelated/BaseTileSet.tscn" type="PackedScene" id=4]
[ext_resource path="res://ObjectsRelated/Pickupables/Subs/Coin/Pickupables_Coin.tscn" type="PackedScene" id=5]
[ext_resource path="res://ObjectsRelated/Pickupables/Subs/LaunchBalls/Pickupable_LaunchBall.tscn" type="PackedScene" id=6]
[ext_resource path="res://WorldRelated/WorldSlices/Stage_004/Level03/WorldSlice_Stage04_03.gd" type="Script" id=7]
[ext_resource path="res://ObjectsRelated/TilesRelated/TileAssets/UncollidablesTileSet.tres" type="TileSet" id=8]
[ext_resource path="res://AreaRegionRelated/Subs/PDAR_MapBounds/PDAR_MapBounds.tscn" type="PackedScene" id=9]
[ext_resource path="res://MiscRelated/VisionFogRelated/VisionFog.tscn" type="PackedScene" id=10]
[ext_resource path="res://AreaRegionRelated/Subs/PlayerDetectionAreaRegion/PlayerDetectionAreaRegion.tscn" type="PackedScene" id=11]
[ext_resource path="res://WorldRelated/WorldSlices/Stage_004/Level03/Assets/ModuleX_StatusIcon_X.png" type="Texture" id=12]
[ext_resource path="res://WorldRelated/WorldSlices/Stage_004/Level03/Assets/ModuleX_ImgInScreen.png" type="Texture" id=13]
[ext_resource path="res://MiscRelated/GUIControlsRelated/PlayerGUI_CheckboxStandard/Assets/PlayerGUI_CheckboxStandard_Status_Check.png" type="Texture" id=14]
[ext_resource path="res://WorldRelated/WorldSlices/Stage_004/Level03/Assets/ModuleX_Screen.png" type="Texture" id=15]
[ext_resource path="res://AreaRegionRelated/Subs/ObjectDestroyingAreaRegion/ObjectDestroyingAreaRegion.tscn" type="PackedScene" id=16]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20, 20 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1157, 269 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 23, 48 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 68.5 )

[node name="WorldSlice_Stage04_03" instance=ExtResource( 1 )]
script = ExtResource( 7 )

[node name="BaseTileSet_Normal" parent="TileContainer" index="0" instance=ExtResource( 4 )]

[node name="TileMap" parent="TileContainer/BaseTileSet_Normal" index="0"]
tile_data = PoolIntArray( -327682, 14, 2, -327681, 14, 3, -393216, 14, 3, -393215, 14, 3, -393214, 14, 3, -393213, 14, 3, -393212, 14, 3, -393211, 14, 3, -393210, 14, 3, -393209, 14, 4, -262187, 14, 2, -262186, 14, 3, -262185, 14, 3, -262184, 14, 3, -262183, 14, 3, -262182, 14, 3, -262181, 14, 3, -262180, 14, 3, -262179, 14, 3, -262178, 14, 3, -262177, 14, 3, -262176, 14, 3, -262175, 14, 4, -262146, 14, 65538, -262145, 14, 65539, -327680, 14, 65539, -327679, 14, 65539, -327678, 14, 65539, -327677, 14, 65539, -327676, 14, 65539, -327675, 14, 65539, -327674, 14, 65539, -327673, 14, 65540, -196651, 14, 65538, -196650, 14, 65539, -196649, 14, 65539, -196648, 14, 65539, -196647, 14, 65539, -196646, 14, 65539, -196645, 14, 65539, -196644, 14, 65539, -196643, 14, 65539, -196642, 14, 65539, -196641, 14, 65539, -196640, 14, 65539, -196639, 14, 65540, -196610, 14, 65538, -196609, 14, 65539, -262144, 14, 65539, -262143, 14, 65539, -262142, 14, 65539, -262141, 14, 65539, -262140, 14, 65539, -262139, 14, 65539, -262138, 14, 65539, -262137, 14, 0, -262136, 14, 3, -262135, 14, 3, -262134, 14, 3, -262133, 14, 4, -131119, 14, 2, -131118, 14, 3, -131117, 14, 3, -131116, 14, 3, -131115, 14, 65538, -131114, 14, 65539, -131113, 14, 65539, -131112, 14, 65539, -131111, 14, 65539, -131110, 14, 65539, -131109, 14, 65539, -131108, 14, 65539, -131107, 14, 65539, -131106, 14, 65539, -131105, 14, 65539, -131104, 14, 65539, -131103, 14, 65540, -131074, 14, 65538, -131073, 14, 65539, -196608, 14, 65539, -196607, 14, 65539, -196606, 14, 65539, -196605, 14, 65539, -196604, 14, 65539, -196603, 14, 65539, -196602, 14, 65539, -196601, 14, 65539, -196600, 14, 65539, -196599, 14, 65539, -196598, 14, 65539, -196597, 14, 65540, -65583, 14, 65538, -65582, 14, 65539, -65581, 14, 65539, -65580, 14, 65539, -65579, 14, 65538, -65578, 14, 65539, -65568, 14, 65539, -65567, 14, 0, -65566, 14, 3, -65565, 14, 3, -65564, 14, 4, -65538, 14, 65538, -65537, 14, 65539, -47, 14, 65538, -46, 14, 65539, -45, 14, 65539, -44, 14, 65539, -43, 14, 65538, -42, 14, 65539, -32, 14, 65539, -31, 14, 65539, -30, 14, 65539, -29, 14, 65539, -28, 14, 65540, -2, 14, 65538, -1, 14, 65539, 65489, 14, 65538, 65490, 14, 65539, 65491, 14, 65539, 65492, 14, 65539, 65493, 14, 65538, 65494, 14, 65539, 65504, 14, 65539, 65505, 14, 65539, 65506, 14, 65539, 65507, 14, 65539, 65508, 14, 65540, 65534, 14, 65538, 65535, 14, 65539, 131025, 14, 131074, 131026, 14, 131075, 131027, 14, 0, 131028, 14, 65539, 131044, 14, 131076, 131070, 14, 131074, 131071, 14, 131075, 196563, 14, 65538, 196564, 14, 65539, 262099, 14, 65538, 262100, 14, 65539, 327635, 14, 65538, 327636, 14, 65539, 393171, 14, 65538, 393172, 14, 65539, 393188, 14, 4, 458707, 14, 131074, 458708, 14, 131075, 458709, 14, 65538, 458710, 14, 65539, 458711, 14, 65539, 458712, 14, 65539, 458713, 14, 65539, 458714, 14, 65539, 458715, 14, 65539, 458716, 14, 65539, 458717, 14, 65539, 458718, 14, 65539, 458719, 14, 65539, 458720, 14, 65539, 458721, 14, 65539, 458722, 14, 65539, 458723, 14, 65539, 458724, 14, 65540, 458732, 14, 65538, 458733, 14, 65539, 458734, 14, 65539, 458735, 14, 65539, 458736, 14, 65539, 458737, 14, 65539, 458738, 14, 65539, 458739, 14, 65539, 458740, 14, 65540, 458749, 14, 65538, 458750, 14, 65539, 458751, 14, 65539, 393216, 14, 65539, 393217, 14, 65539, 393218, 14, 65540, 524245, 14, 131074, 524246, 14, 131075, 524247, 14, 131075, 524248, 14, 131075, 524249, 14, 131075, 524250, 14, 131075, 524251, 14, 131075, 524252, 14, 131075, 524253, 14, 131075, 524254, 14, 131075, 524255, 14, 131075, 524256, 14, 131075, 524257, 14, 131075, 524258, 14, 131075, 524259, 14, 131075, 524260, 14, 131076, 524268, 14, 131074, 524269, 14, 131075, 524270, 14, 131075, 524271, 14, 131075, 524272, 14, 131075, 524273, 14, 0, 524274, 14, 65539, 524275, 14, 65539, 524276, 14, 65540, 524285, 14, 65538, 524286, 14, 65539, 524287, 14, 0, 458752, 14, 131075, 458753, 14, 131075, 458754, 14, 131076, 589784, 14, 65538, 589785, 14, 65539, 589786, 14, 65539, 589787, 14, 65539, 589788, 14, 65539, 589789, 14, 65539, 589790, 14, 65539, 589791, 14, 65539, 589792, 14, 65539, 589793, 14, 65540, 589809, 14, 65538, 589810, 14, 65539, 589811, 14, 65539, 589812, 14, 65540, 589821, 14, 65538, 589822, 14, 65539, 589823, 14, 65540, 655320, 14, 65538, 655321, 14, 65539, 655322, 14, 65539, 655323, 14, 65539, 655324, 14, 65539, 655325, 14, 65539, 655326, 14, 65539, 655327, 14, 65539, 655328, 14, 65539, 655329, 14, 65540, 655345, 14, 65538, 655346, 14, 65539, 655347, 14, 65539, 655348, 14, 65540, 655357, 14, 131074, 655358, 14, 131075, 655359, 14, 131076, 720856, 14, 131074, 720857, 14, 131075, 720858, 14, 131075, 720859, 14, 131075, 720860, 14, 131075, 720861, 14, 131075, 720862, 14, 131075, 720863, 14, 131075, 720864, 14, 131075, 720865, 14, 131076, 720881, 14, 65538, 720882, 14, 65539, 720883, 14, 65539, 720884, 14, 65540, 786417, 14, 131074, 786418, 14, 131075, 786419, 14, 131075, 786420, 14, 131076, 786443, 14, 65538, 786444, 14, 65539, 786445, 14, 65539, 786446, 14, 65539, 786447, 14, 65539, 786448, 14, 65539, 786449, 14, 65540, 851979, 14, 131074, 851980, 14, 131075, 851981, 14, 0, 851982, 14, 65539, 851983, 14, 0, 851984, 14, 131075, 851985, 14, 131076, 917517, 14, 65538, 917518, 14, 65539, 917519, 14, 65540, 983053, 14, 131074, 983054, 14, 131075, 983055, 14, 131076 )

[node name="BaseTileSet_Energized" parent="TileContainer" index="1" instance=ExtResource( 4 )]
energy_mode = 1

[node name="TileMap" parent="TileContainer/BaseTileSet_Energized" index="0"]
modulate = Color( 1, 0.968627, 0.172549, 1 )
tile_data = PoolIntArray( -65577, 14, 0, -65576, 14, 131075, -65575, 14, 131075, -65574, 14, 131075, -65573, 14, 131075, -65572, 14, 131075, -65571, 14, 131075, -65570, 14, 131075, -65569, 14, 0, -131072, 14, 0, -131071, 14, 131075, -131070, 14, 131075, -131069, 14, 131075, -131068, 14, 131075, -131067, 14, 131075, -131066, 14, 131075, -131065, 14, 131075, -131064, 14, 131075, -131063, 14, 131075, -131062, 14, 131075, -131061, 14, 131076, -41, 14, 65540, -33, 14, 65538, -65536, 14, 65540, 65495, 14, 65540, 65503, 14, 65538, 0, 14, 65540, 131029, 14, 0, 131030, 14, 131075, 131031, 14, 131076, 131039, 14, 131074, 131040, 14, 131075, 131041, 14, 131075, 131042, 14, 131075, 131043, 14, 131075, 65536, 14, 131076, 65556, 14, 2, 65557, 14, 262147, 65558, 14, 262147, 65559, 14, 262147, 65560, 14, 262147, 65561, 14, 262147, 65562, 14, 4, 196565, 14, 262144, 131092, 14, 327680, 131098, 14, 262144, 262101, 14, 262144, 196634, 14, 262144, 327637, 14, 262144, 262170, 14, 262144, 393173, 14, 0, 393174, 14, 3, 393175, 14, 3, 393176, 14, 3, 393177, 14, 3, 393178, 14, 3, 393179, 14, 3, 393180, 14, 3, 393181, 14, 3, 393182, 14, 3, 393183, 14, 3, 393184, 14, 3, 393185, 14, 3, 393186, 14, 3, 393187, 14, 3, 393196, 14, 2, 393197, 14, 3, 393198, 14, 3, 393199, 14, 3, 393200, 14, 3, 393201, 14, 3, 393202, 14, 3, 393203, 14, 3, 393204, 14, 4, 393213, 14, 2, 393214, 14, 3, 393215, 14, 3, 327680, 14, 3, 327681, 14, 3, 327682, 14, 4, 327706, 14, 262144, 393236, 14, 196608, 393242, 14, 262144, 458772, 14, 131074, 458773, 14, 262147, 458774, 14, 262147, 458775, 14, 262147, 458776, 14, 262147, 458777, 14, 262147, 458778, 14, 131076, 589835, 14, 196608, 655371, 14, 262144, 720907, 14, 0, 720908, 14, 3, 720909, 14, 3, 720910, 14, 3, 720911, 14, 3, 720912, 14, 3, 720913, 14, 0 )

[node name="BaseTileSet_Grounded" parent="TileContainer" index="2" instance=ExtResource( 4 )]
energy_mode = 2

[node name="TileMap" parent="TileContainer/BaseTileSet_Grounded" index="0"]
modulate = Color( 0.682353, 0.372549, 0, 1 )
tile_data = PoolIntArray( 19, 14, 2, 20, 14, 3, 21, 14, 3, 22, 14, 3, 23, 14, 3, 24, 14, 3, 25, 14, 3, 26, 14, 3, 27, 14, 4, 65555, 14, 262144, 65563, 14, 65540, 131091, 14, 327680, 131099, 14, 65540, 196635, 14, 65540, 262171, 14, 65540, 327707, 14, 65540, 393235, 14, 196608, 393243, 14, 65540, 458771, 14, 262144, 458779, 14, 65540, 524307, 14, 131074, 524308, 14, 131075, 524309, 14, 131075, 524310, 14, 131075, 524311, 14, 131075, 524312, 14, 131075, 524313, 14, 131075, 524314, 14, 131075, 524315, 14, 131076 )

[node name="BaseTileSet_Uncolls01" parent="TileContainer" index="3" instance=ExtResource( 4 )]

[node name="TileMap" parent="TileContainer/BaseTileSet_Uncolls01" index="0"]
tile_set = ExtResource( 8 )
tile_data = PoolIntArray( -40, 12, 0, -39, 12, 0, -38, 12, 0, -37, 12, 0, -36, 12, 0, -35, 12, 0, -34, 12, 0, -65535, 12, 0, -65534, 12, 0, -65533, 12, 0, -65532, 12, 0, -65531, 12, 0, -65530, 12, 0, -65529, 12, 0, -65528, 12, 0, -65527, 12, 0, -65526, 12, 0, -65525, 12, 0, 65496, 12, 0, 65497, 12, 0, 65498, 12, 0, 65499, 12, 0, 65500, 12, 0, 65501, 12, 0, 65502, 12, 0, 1, 12, 0, 2, 12, 0, 3, 12, 0, 4, 12, 0, 5, 12, 0, 6, 12, 0, 7, 12, 0, 8, 12, 0, 9, 12, 0, 10, 12, 0, 11, 12, 0, 131032, 12, 0, 131033, 12, 0, 131034, 12, 0, 131035, 12, 0, 131036, 12, 0, 131037, 12, 0, 131038, 12, 0, 65537, 12, 0, 65538, 12, 0, 65539, 12, 0, 65540, 12, 0, 65541, 12, 0, 65542, 12, 0, 65543, 12, 0, 65544, 12, 0, 65545, 12, 0, 65546, 12, 0, 65547, 12, 196609, 196566, 12, 0, 196567, 12, 0, 196568, 12, 0, 196569, 12, 0, 196570, 12, 0, 196571, 12, 0, 196572, 12, 0, 196573, 12, 0, 196574, 12, 0, 196575, 12, 0, 196576, 12, 0, 196577, 12, 0, 196578, 12, 0, 196579, 12, 0, 196580, 12, 0, 196607, 12, 0, 131072, 12, 0, 131073, 12, 0, 131074, 12, 0, 131075, 12, 0, 131076, 12, 0, 131077, 12, 0, 131078, 12, 196609, 131079, 12, 0, 131080, 12, 0, 131081, 12, 0, 131082, 12, 0, 131093, 12, 0, 131094, 12, 0, 131095, 12, 0, 131096, 12, 0, 131097, 12, 0, 262102, 12, 0, 262103, 12, 0, 262104, 12, 0, 262105, 12, 0, 262106, 12, 0, 262107, 12, 0, 262108, 12, 0, 262109, 12, 0, 262110, 12, 0, 262111, 12, 0, 262112, 12, 0, 262113, 12, 0, 262114, 12, 0, 262115, 12, 0, 262116, 12, 0, 262142, 12, 0, 262143, 12, 0, 196608, 12, 0, 196609, 12, 0, 196610, 12, 0, 196611, 12, 0, 196612, 12, 196609, 196616, 12, 0, 196617, 12, 0, 196618, 12, 0, 196627, 12, 0, 196628, 12, 0, 196629, 12, 0, 196630, 12, 0, 196631, 12, 0, 196632, 12, 0, 196633, 12, 0, 327638, 12, 0, 327639, 12, 0, 327640, 12, 0, 327641, 12, 0, 327642, 12, 0, 327643, 12, 0, 327644, 12, 0, 327645, 12, 0, 327646, 12, 0, 327647, 12, 0, 327648, 12, 0, 327649, 12, 0, 327650, 12, 0, 327651, 12, 0, 327652, 12, 0, 327677, 12, 0, 327678, 12, 0, 327679, 12, 0, 262144, 12, 0, 262145, 12, 0, 262146, 12, 0, 262152, 12, 0, 262153, 12, 0, 262154, 12, 0, 262155, 12, 0, 262163, 12, 0, 262164, 12, 0, 262165, 12, 0, 262166, 12, 0, 262167, 12, 0, 262168, 12, 0, 262169, 12, 0, 327688, 12, 131074, 327689, 12, 0, 327690, 12, 0, 327691, 12, 0, 327699, 12, 0, 327700, 12, 0, 327701, 12, 0, 327702, 12, 0, 327704, 12, 0, 327705, 12, 0, 393225, 12, 0, 393226, 12, 0, 393227, 12, 0, 393237, 12, 0, 393238, 12, 0, 393239, 12, 0, 393240, 12, 0, 393241, 12, 0, 458761, 12, 0, 458762, 12, 0, 458763, 12, 0, 458764, 12, 0, 524298, 12, 131074, 524299, 12, 0, 524300, 12, 0, 524301, 12, 0, 524302, 12, 0, 589836, 12, 0, 589837, 12, 0, 589838, 12, 0, 589839, 12, 0, 589840, 12, 0, 589841, 12, 0, 655372, 12, 0, 655373, 12, 0, 655374, 12, 0, 655375, 12, 0, 655376, 12, 0, 655377, 12, 0 )

[node name="BaseTileSet_UncollsWallDec" parent="TileContainer" index="4" instance=ExtResource( 4 )]

[node name="TileMap" parent="TileContainer/BaseTileSet_UncollsWallDec" index="0"]
tile_set = ExtResource( 8 )
tile_data = PoolIntArray( -65530, 27, 1, 6, 27, 1, 65538, 27, 65539, 65539, 27, 0, 65540, 27, 0, 65541, 27, 0, 65542, 27, 65537, 196566, 27, 0, 196567, 27, 0, 196568, 27, 65536, 196579, 27, 1, 131074, 27, 1, 131095, 27, 1, 262104, 27, 1, 262115, 27, 1, 262143, 27, 65539, 196608, 27, 0, 196609, 27, 0, 196610, 27, 131074, 196631, 27, 1, 327639, 27, 65539, 327640, 27, 65537, 327646, 27, 65539, 327647, 27, 0, 327648, 27, 0, 327649, 27, 0, 327650, 27, 0, 327651, 27, 65537, 327679, 27, 1, 262146, 27, 1, 262167, 27, 131072, 262168, 27, 0, 262169, 27, 0, 327703, 27, 1, 393237, 27, 0, 393238, 27, 0, 393239, 27, 65537, 524301, 27, 1, 589837, 27, 1, 655373, 27, 65538, 655374, 27, 0, 655375, 27, 65536 )

[node name="BaseTileSet_Uncolls02" parent="TileContainer" index="5" instance=ExtResource( 4 )]

[node name="TileMap" parent="TileContainer/BaseTileSet_Uncolls02" index="0"]
tile_set = ExtResource( 8 )
tile_data = PoolIntArray( -65535, 17, 65538, 1, 17, 65538, 65537, 17, 65538, 196606, 17, 65538, 131073, 17, 65538, 262142, 17, 65538, 196609, 17, 65538, 196629, 13, 0, 196630, 18, 2, 327678, 17, 65538, 262145, 17, 65538, 327702, 17, 0 )

[node name="BaseTileSet_Red" parent="TileContainer" index="6" instance=ExtResource( 4 )]

[node name="TileMap" parent="TileContainer/BaseTileSet_Red" index="0"]
modulate = Color( 1, 0.109804, 0.109804, 1 )
tile_data = PoolIntArray( 196628, 7, 0, 262164, 7, 65536, 327700, 7, 131072 )

[node name="BaseTileSet_Green" parent="TileContainer" index="7" instance=ExtResource( 4 )]

[node name="TileMap" parent="TileContainer/BaseTileSet_Green" index="0"]
modulate = Color( 0.192157, 1, 0.0784314, 1 )
tile_data = PoolIntArray( 196627, 7, 0, 262163, 7, 65536, 327699, 7, 131072 )

[node name="BaseTileSet_Fragile" parent="TileContainer" index="8" instance=ExtResource( 4 )]
glass_breakable_type = 3

[node name="TileMap" parent="TileContainer/BaseTileSet_Fragile" index="0"]
tile_data = PoolIntArray( 131081, 17, 196608, 131085, 17, 196608, 196617, 17, 262144, 196621, 17, 262144, 262153, 17, 262144, 262157, 17, 262144, 327689, 17, 262144, 327693, 17, 262144, 393225, 17, 327680, 393229, 17, 327680 )

[node name="BaseTileSet_SimpleGlass" parent="TileContainer" index="9" instance=ExtResource( 4 )]
glass_breakable_type = 2

[node name="TileMap" parent="TileContainer/BaseTileSet_SimpleGlass" index="0"]
tile_data = PoolIntArray( 131095, 3, 0, 196631, 3, 65536, 262167, 3, 65536, 327703, 3, 65536, 393239, 3, 131072 )

[node name="BaseTileSet_Uncol_ModX_01" parent="TileContainer" index="10" instance=ExtResource( 4 )]

[node name="TileMap" parent="TileContainer/BaseTileSet_Uncol_ModX_01" index="0"]
tile_set = ExtResource( 8 )
tile_data = PoolIntArray( -36, 32, 131073, 65496, 32, 3, 65497, 32, 131072, 196574, 32, 131072, 196575, 32, 131072, 196576, 32, 262147, 196577, 32, 327680, 262109, 32, 131073, 327645, 32, 131073 )

[node name="BaseTileSet_Uncol_ModX_02" parent="TileContainer" index="11" instance=ExtResource( 4 )]

[node name="TileMap" parent="TileContainer/BaseTileSet_Uncol_ModX_02" index="0"]
tile_set = ExtResource( 8 )
tile_data = PoolIntArray( -39, 33, 0, -38, 33, 1, -37, 33, 1, -36, 33, 1, -35, 33, 1, -34, 33, 2, 65497, 33, 65536, 65498, 33, 65537, 65499, 33, 65537, 65500, 33, 65537, 65501, 33, 65537, 65502, 33, 65538, 131033, 33, 65536, 131034, 33, 65537, 131035, 33, 65537, 131036, 33, 65537, 131037, 33, 65537, 131038, 33, 65538, 196569, 33, 65536, 196570, 33, 65537, 196571, 33, 65537, 196572, 33, 65537, 196573, 33, 65537, 196574, 33, 65538, 262105, 33, 131072, 262106, 33, 131073, 262107, 33, 131073, 262108, 33, 131073, 262109, 33, 131073, 262110, 33, 131074, 327642, 33, 196608, 327643, 33, 196609, 327644, 33, 196610 )

[node name="BaseTileSet_SimpleGlassForModX" parent="TileContainer" index="12" instance=ExtResource( 4 )]
glass_breakable_type = 2

[node name="TileMap" parent="TileContainer/BaseTileSet_SimpleGlassForModX" index="0"]
tile_data = PoolIntArray( 196580, 3, 0, 262116, 3, 65536, 327652, 3, 131072 )

[node name="PlayerCaptureAreaRegion" parent="AreaRegionContainer" index="0" instance=ExtResource( 3 )]

[node name="CollisionShape2D" parent="AreaRegionContainer/PlayerCaptureAreaRegion" index="0"]
position = Vector2( 812, 204 )
shape = SubResource( 1 )

[node name="PlayerCaptureAreaRegion2" parent="AreaRegionContainer" index="1" instance=ExtResource( 3 )]
position = Vector2( 0, -120 )

[node name="CollisionShape2D" parent="AreaRegionContainer/PlayerCaptureAreaRegion2" index="0"]
position = Vector2( 812, 204 )
shape = SubResource( 1 )

[node name="PDAR_MapBounds" parent="AreaRegionContainer" index="2" instance=ExtResource( 9 )]

[node name="CollisionShape2D" parent="AreaRegionContainer/PDAR_MapBounds" index="0"]
position = Vector2( -230, 167 )
shape = SubResource( 2 )

[node name="PDAR_FogLift" parent="AreaRegionContainer" index="3" instance=ExtResource( 11 )]
position = Vector2( -929, 158 )

[node name="CollisionShape2D" parent="AreaRegionContainer/PDAR_FogLift" index="0"]
position = Vector2( 29, -46 )
shape = SubResource( 3 )

[node name="ObjectDestroyingAreaRegion" parent="AreaRegionContainer" index="4" instance=ExtResource( 16 )]
position = Vector2( -862, 41 )

[node name="CollisionShape2D" parent="AreaRegionContainer/ObjectDestroyingAreaRegion" index="0"]
position = Vector2( 8, 71.5 )
shape = SubResource( 4 )

[node name="Object_InteractableButton" parent="ObjectContainer" index="0" instance=ExtResource( 2 )]
position = Vector2( 375, -16 )
rotation = 4.71239
body_mode_to_use = 1
tileset_01_to_register_in_toggle__path = NodePath("../../TileContainer/BaseTileSet_Green")
button_color = 1

[node name="Object_InteractableButton2" parent="ObjectContainer" index="1" instance=ExtResource( 2 )]
position = Vector2( 567, 335 )
rotation = 4.71239
body_mode_to_use = 1
tileset_01_to_register_in_toggle__path = NodePath("../../TileContainer/BaseTileSet_Red")
button_color = 0

[node name="Pickupable_LaunchBall" parent="ObjectContainer" index="2" instance=ExtResource( 6 )]
position = Vector2( 144, -14 )

[node name="Pickupable_LaunchBall3" parent="ObjectContainer" index="3" instance=ExtResource( 6 )]
position = Vector2( 509, 333 )
launch_ball_type = 3

[node name="Object_IB_ForModXScreen" parent="ObjectContainer" index="4" instance=ExtResource( 2 )]
position = Vector2( -1328, 72 )
rotation = 3.14159
body_mode_to_use = 1

[node name="Pickupables_Coin" parent="CoinsContainer" index="0" instance=ExtResource( 5 )]
position = Vector2( 474, 28 )

[node name="Position2D" type="Position2D" parent="PlayerSpawnCoordsContainer" index="0"]
position = Vector2( 0, 144 )
__meta__ = {
"_gizmo_extents_": 16.0
}

[node name="MiscContainer" type="Node2D" parent="." index="6"]

[node name="ModX_Screen" type="TextureRect" parent="MiscContainer" index="0"]
margin_left = -1220.0
margin_top = -4.0
margin_right = -1084.0
margin_bottom = 100.0
mouse_filter = 2
texture = ExtResource( 15 )

[node name="ModX_AllContainer" type="VBoxContainer" parent="MiscContainer" index="1"]
margin_left = -1214.0
margin_top = 2.0
margin_right = -1090.0
margin_bottom = 94.0
mouse_filter = 2

[node name="ModX_StatsContainer" type="HBoxContainer" parent="MiscContainer/ModX_AllContainer" index="0"]
margin_top = 2.0
margin_right = 124.0
margin_bottom = 26.0
mouse_filter = 2
size_flags_vertical = 6
custom_constants/separation = 10

[node name="TextureRect" type="TextureRect" parent="MiscContainer/ModX_AllContainer/ModX_StatsContainer" index="0"]
margin_right = 27.0
margin_bottom = 24.0
mouse_filter = 2
texture = ExtResource( 13 )

[node name="MarginContainer" type="MarginContainer" parent="MiscContainer/ModX_AllContainer/ModX_StatsContainer" index="1"]
margin_left = 37.0
margin_right = 64.0
margin_bottom = 24.0
mouse_filter = 2
custom_constants/margin_top = 2

[node name="Label" type="Label" parent="MiscContainer/ModX_AllContainer/ModX_StatsContainer/MarginContainer" index="0"]
margin_top = 5.0
margin_right = 27.0
margin_bottom = 20.0
text = "2-3"

[node name="ModXStatus_Stats" type="TextureRect" parent="MiscContainer/ModX_AllContainer/ModX_StatsContainer" index="2"]
margin_left = 104.0
margin_top = 2.0
margin_right = 124.0
margin_bottom = 22.0
mouse_filter = 2
size_flags_horizontal = 10
size_flags_vertical = 6
texture = ExtResource( 12 )

[node name="ModX_PlayerAesthContainer" type="HBoxContainer" parent="MiscContainer/ModX_AllContainer" index="1"]
margin_top = 34.0
margin_right = 124.0
margin_bottom = 58.0
mouse_filter = 2
size_flags_vertical = 6
custom_constants/separation = 10

[node name="TextureRect" type="TextureRect" parent="MiscContainer/ModX_AllContainer/ModX_PlayerAesthContainer" index="0"]
margin_right = 27.0
margin_bottom = 24.0
mouse_filter = 2
texture = ExtResource( 13 )

[node name="MarginContainer" type="MarginContainer" parent="MiscContainer/ModX_AllContainer/ModX_PlayerAesthContainer" index="1"]
margin_left = 37.0
margin_right = 64.0
margin_bottom = 24.0
mouse_filter = 2
custom_constants/margin_top = 2

[node name="Label" type="Label" parent="MiscContainer/ModX_AllContainer/ModX_PlayerAesthContainer/MarginContainer" index="0"]
margin_top = 5.0
margin_right = 27.0
margin_bottom = 20.0
text = "2-5"

[node name="ModXStatus_PlayerAesth" type="TextureRect" parent="MiscContainer/ModX_AllContainer/ModX_PlayerAesthContainer" index="2"]
margin_left = 104.0
margin_top = 2.0
margin_right = 124.0
margin_bottom = 22.0
mouse_filter = 2
size_flags_horizontal = 10
size_flags_vertical = 6
texture = ExtResource( 12 )

[node name="ModX_TileColorsContainer" type="HBoxContainer" parent="MiscContainer/ModX_AllContainer" index="2"]
margin_top = 66.0
margin_right = 124.0
margin_bottom = 90.0
mouse_filter = 2
size_flags_vertical = 6
custom_constants/separation = 10

[node name="TextureRect" type="TextureRect" parent="MiscContainer/ModX_AllContainer/ModX_TileColorsContainer" index="0"]
margin_right = 27.0
margin_bottom = 24.0
mouse_filter = 2
texture = ExtResource( 13 )

[node name="MarginContainer" type="MarginContainer" parent="MiscContainer/ModX_AllContainer/ModX_TileColorsContainer" index="1"]
margin_left = 37.0
margin_right = 64.0
margin_bottom = 24.0
mouse_filter = 2
custom_constants/margin_top = 2

[node name="Label" type="Label" parent="MiscContainer/ModX_AllContainer/ModX_TileColorsContainer/MarginContainer" index="0"]
margin_top = 5.0
margin_right = 27.0
margin_bottom = 20.0
text = "3-4"

[node name="ModXStatus_TileColors" type="TextureRect" parent="MiscContainer/ModX_AllContainer/ModX_TileColorsContainer" index="2"]
margin_left = 102.0
margin_top = 1.0
margin_right = 124.0
margin_bottom = 23.0
mouse_filter = 2
size_flags_horizontal = 10
size_flags_vertical = 6
texture = ExtResource( 14 )

[node name="VisionFog" parent="MiscContainer" index="2" instance=ExtResource( 10 )]
visible = false
position = Vector2( -1329, -139 )

[node name="DialogTemplate_Body_CBM" parent="MiscContainer/VisionFog" index="0"]
margin_left = -95.0
margin_top = 12.0
margin_right = 413.0
margin_bottom = 394.0

[node name="GridContainer" parent="MiscContainer/VisionFog/DialogTemplate_Body_CBM" index="0"]
margin_right = 508.0
margin_bottom = 382.0

[node name="Border_Top" parent="MiscContainer/VisionFog/DialogTemplate_Body_CBM/GridContainer" index="1"]
margin_right = 444.0

[node name="CornerP_TopRight" parent="MiscContainer/VisionFog/DialogTemplate_Body_CBM/GridContainer" index="2"]
margin_left = 444.0
margin_right = 508.0

[node name="Border_Left" parent="MiscContainer/VisionFog/DialogTemplate_Body_CBM/GridContainer" index="3"]
margin_bottom = 318.0

[node name="MidContainer" parent="MiscContainer/VisionFog/DialogTemplate_Body_CBM/GridContainer" index="4"]
margin_right = 444.0
margin_bottom = 318.0

[node name="MidFill" parent="MiscContainer/VisionFog/DialogTemplate_Body_CBM/GridContainer/MidContainer" index="0"]
margin_right = 380.0
margin_bottom = 254.0

[node name="ContentContainer" parent="MiscContainer/VisionFog/DialogTemplate_Body_CBM/GridContainer/MidContainer" index="1"]
margin_right = 380.0
margin_bottom = 254.0

[node name="Border_Right" parent="MiscContainer/VisionFog/DialogTemplate_Body_CBM/GridContainer" index="5"]
margin_left = 444.0
margin_right = 508.0
margin_bottom = 318.0

[node name="CornerP_BotLeft" parent="MiscContainer/VisionFog/DialogTemplate_Body_CBM/GridContainer" index="6"]
margin_top = 318.0
margin_bottom = 382.0

[node name="Border_Bot" parent="MiscContainer/VisionFog/DialogTemplate_Body_CBM/GridContainer" index="7"]
margin_top = 318.0
margin_right = 444.0
margin_bottom = 382.0

[node name="CornerP_BotRight" parent="MiscContainer/VisionFog/DialogTemplate_Body_CBM/GridContainer" index="8"]
margin_left = 444.0
margin_top = 318.0
margin_right = 508.0
margin_bottom = 382.0

[connection signal="player_entered_in_area" from="AreaRegionContainer/PDAR_FogLift" to="." method="_on_PDAR_FogLift_player_entered_in_area"]
[connection signal="pressed" from="ObjectContainer/Object_IB_ForModXScreen" to="." method="_on_Object_IB_ForModXScreen_pressed"]

[editable path="TileContainer/BaseTileSet_Normal"]
[editable path="TileContainer/BaseTileSet_Energized"]
[editable path="TileContainer/BaseTileSet_Grounded"]
[editable path="TileContainer/BaseTileSet_Uncolls01"]
[editable path="TileContainer/BaseTileSet_UncollsWallDec"]
[editable path="TileContainer/BaseTileSet_Uncolls02"]
[editable path="TileContainer/BaseTileSet_Red"]
[editable path="TileContainer/BaseTileSet_Green"]
[editable path="TileContainer/BaseTileSet_Fragile"]
[editable path="TileContainer/BaseTileSet_SimpleGlass"]
[editable path="TileContainer/BaseTileSet_Uncol_ModX_01"]
[editable path="TileContainer/BaseTileSet_Uncol_ModX_02"]
[editable path="TileContainer/BaseTileSet_SimpleGlassForModX"]
[editable path="AreaRegionContainer/PlayerCaptureAreaRegion"]
[editable path="AreaRegionContainer/PlayerCaptureAreaRegion2"]
[editable path="AreaRegionContainer/PDAR_MapBounds"]
[editable path="AreaRegionContainer/PDAR_FogLift"]
[editable path="AreaRegionContainer/ObjectDestroyingAreaRegion"]
[editable path="MiscContainer/VisionFog"]
[editable path="MiscContainer/VisionFog/DialogTemplate_Body_CBM"]
